chapter16/add-ons/gw.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grafana-gateway 
  namespace: istio-system
spec:
  servers:
    - hosts:
        - grafana.$hostip.nip.io
        - prom.$hostip.nip.io
        - jaeger.$hostip.nip.io
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
