chapter16/add-ons/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - prom.$hostip.nip.io
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: prometheus
